# xaitk-saliency-web-demo

./: .codespellrc  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.rst  DEV.rst  MANIFEST.in  README.md  README.rst  app-mac-setup.py  example.ipynb  mac-m1-readme.md  mac-m1-requirements.txt  pyproject.toml  setup.cfg  state.md  xaitk.py
.deploy-release/: Dockerfile
.deploy-release/setup/: apps.yml  initialize.sh  requirements.txt
.github/workflows/: docker.yml  test_and_release.yml
bundles/desktop/macOS/: README.md  requirements.txt  setup.py  xaitk.icns
bundles/docker/: Dockerfile  README.md
bundles/docker/scripts/: build_image.sh  build_server.sh  run_image.sh  run_server.sh
bundles/docker/setup/: apps.yml  requirements.txt
xaitk_demo/: __init__.py  __main__.py  ai.py  controller.py  core.py  postprocess.py  ui.py  ui_helper.py
xaitk_saliency_demo/: __init__.py
xaitk_saliency_demo/app/: cli.py  config.py  controller.py  core.py  image.py  jupyter.py  main.py  xaitk_widgets.py
xaitk_saliency_demo/app/engine/: __init__.py  ai.py  exec.py  main.py  ml_models.py  ml_xai.py  options.py  state.py  trame_exec.py  trame_state.py
xaitk_saliency_demo/app/engine/assets/: __init__.py  coco_classes.txt
xaitk_saliency_demo/app/ml/: models.py  xai.py
xaitk_saliency_demo/app/ml/assets/: __init__.py
xaitk_saliency_demo/app/ui/: __init__.py  main.py  options.py  ui_helper.py
