[tool.poetry]
name = "xaitk-demo"
version = "0.1.0"
description = ""
authors = ["Sebastien Jourdain <sebastien.jourdain@kitware.com>"]

[tool.poetry.dependencies]
python = "^3.8"
trame = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xaitk = "xaitk_demo:main"
black = "black:main"