[tool.poetry]
name = "xaitk-demo"
version = "0.1.0"
description = """Visual saliency map generation web UI"""
license = "BSD-3-Clause"
authors = ["Kitware, Inc. <xaitk@kitware.com>"]
readme = "README.md"
repository = "https://github.com/XAITK/xaitk-saliency-web-demo"
documentation = "https://xaitk-saliency-web-demo.readthedocs.io/"
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
trame = "^1.1.1"
python = ">=3.7,<3.10"
numpy = "^1.20.3"
scikit-image = "^0.18.1"
scikit-learn = "^0.24.2"
smqtk-classifier = ">=0.17.0"
smqtk-core = ">=0.18.0"
smqtk-descriptors = ">=0.16.0"
scipy = "^1.6.3"
torch = "^1.9.1"
torchvision = "^0.10.1"
xaitk-saliency = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
black = "black:main"