[metadata]
name = xaitk-saliency-demo
version = 2.0.0
description = Web application demonstrating XAITK Saliency functionality
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware Inc.
license = BSD License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame>=2.1.0
    trame-components>=2.0.4
    altair==4.1.0
    smqtk-classifier==0.19.0
    smqtk-core==0.18.1
    smqtk-dataprovider==0.16.0
    smqtk-descriptors==0.18.1
    smqtk-detection[torch,centernet]==0.19.0
    smqtk-image-io==0.16.2
    xaitk-saliency==0.6.1
    torchvision==0.11.1
    scikit-learn==0.24.2
    scikit-image==0.18.3
    ubelt==1.1.1


[options.entry_points]
console_scripts =
    xaitk-saliency-demo = xaitk_saliency_demo:main
