[metadata]
name = xaitk_saliency_demo
version = 2.4.3
description = Web application demonstrating XAITK Saliency functionality
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware Inc.
license = BSD License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame>=3.2.7
    trame-vuetify
    trame-components>=2.2.1
    trame-plotly>=3.0.2
    plotly==5.15.0
    pandas

    smqtk-classifier==0.19.0
    smqtk-core==0.19.0
    smqtk-dataprovider==0.18.0
    smqtk-descriptors==0.19.0
    smqtk-detection[torch,centernet]==0.20.0
    smqtk-image-io==0.17.1

    xaitk-saliency==0.7.0
    ubelt==1.3.2

    torch>=1.9.0,!=2.0.1
    torchvision>=0.10.0
    transformers

    scikit-learn==1.3.0
    scikit-image==0.21.0


[options.entry_points]
console_scripts =
    xaitk-saliency-demo = xaitk_saliency_demo:main

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)